# aurora

./: pyproject.toml
aurora/model/: aurora.py
