[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aurora"
version = "0.1.0"  # Poetry requires an explicit version; can be dynamically set
license = "License :: OSI Approved :: MIT License"
description = "Implementation of the Aurora model"
authors = [
    "Cris Bodnar <crisbodnar96@gmail.com>",
    "Wessel Bruinsma <wbruinsma@microsoft.com>",
    "Ana Lucic <ana.lucic@microsoft.com>",
    "Megan Stanley <meganstanley@microsoft.com>",
    "Patrick Garvan <pgarvan@microsoft.com>",
    "Johannes Brandstetter <brandstetter@ml.jku.at>",
    "Richard E. Turner <t-rturner@microsoft.com>",
    "Paris Perdikaris <paperdikaris@microsoft.com>",
]
readme = "README.md"
repository = "https://github.com/microsoft/aurora"
keywords = [
    "aurora model",
    "atmospheric dynamics",
    "atmospheric chemistry",
    "ocean waves",
    "tropical cyclone tracking",
    "weather prediction",
    "foundation models",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "*"
scipy = "*"
torch = "*"
einops = "*"
timm = "^1.0.9"
pydantic = "*"
xarray = "*"
netcdf4 = "*"

[tool.poetry.group.dev.dependencies]
wheel = "*"
build = "*"
ghp-import = "*"
pytest = "*"
pytest-cov = "*"
requests-mock = "*"
mypy = "*"
ruff = "0.4.1"
pre-commit = "*"
jupyter-book = "*"
mlflow = "*"

[tool.coverage.run]
branch = true
command_line = "-m pytest --verbose test"
source = ["aurora"]

[tool.pytest.ini_options]
testpaths = ["tests/", "aurora", "docs"]
addopts = [
    "-ra",
    "-p",
    "no:doctest",
]
minversion = "6.0"

[tool.ruff]
src = ["aurora"]
target-version = "py38"
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "D410",
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade
]
ignore = ["F811", "B018"]

[tool.ruff.lint.isort]
known-local-folder = ["aurora"]

[tool.ruff.format]
docstring-code-format = true
